fix(build): No event triggers defined in `on`

--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -1,11 +1,11 @@
 name: Building Test
 
-#on:
-#  push:
-#    tags:
-#      - '!refs/tags/*'
-#    branches:
-#      - 'main'
+on:
+  push:
+    tags:
+      - '!refs/tags/*'
+    branches:
+      - 'main'
 
 jobs:
   setup:
