feat(build/Equicord): New build method

--- a/.github/workflows/equicord_build.yml
+++ b/.github/workflows/equicord_build.yml
@@ -1,11 +1,9 @@
 name: Building Test
 
 on:
-  push:
-    tags:
-      - '!refs/tags/*'
-    branches:
-      - 'main'
+  schedule:
+    - cron: '0 * * * *'
+  workflow_dispatch:
 
 jobs:
   setup:
